--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-navigation-menu": "^1.2.14",
+    "@tsparticles/engine": "^3.9.1",
+    "@tsparticles/plugin-emitters": "^3.9.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/shape-image": "^3.9.1",
+    "@tsparticles/slim": "^3.9.1",
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
