--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
     "eslint-config-prettier": "^10.1.8",
+    "jsdoc": "^4.0.5",
     "prettier": "^3.6.2",
     "tailwindcss": "^4",
     "typescript": "^5"
